tests/continue/invalid/semantic/ContinueNotInLoop3.wacc
# continue is not used inside a loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false do
    skip
  done ;
  continue
end
